finished new Table implementation based on InfiniteItemView2 logic